rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@snuba-metrics-PolymorphicMetricsProcessor-snuba-metrics__1__snuba-metrics-sampled.json.snap
---
source: src/processors/mod.rs
description: "{\n  \"use_case_id\": \"release-health\",\n  \"org_id\": 1,\n  \"project_id\": 2,\n  \"metric_id\": 1232341,\n  \"type\": \"s\",\n  \"timestamp\": 1676388965,\n  \"tags\": {\n    \"10\": 11,\n    \"20\": 22,\n    \"30\": 33\n  },\n  \"value\": [324234, 345345, 456456, 567567],\n  \"retention_days\": 22,\n  \"sample_weight\": 100.1,\n  \"mapping_meta\": {\n    \"c\": {\n      \"10\": \"tag-1\",\n      \"20\": \"tag-2\",\n      \"11\": \"value-1\",\n      \"22\": \"value-2\",\n      \"30\": \"tag-3\"\n    },\n    \"d\": {\n      \"33\": \"value-3\"\n    }\n  }\n}\n"
expression: snapshot_payload
---
[
  {
    "count_value": null,
    "distribution_values": null,
    "materialization_version": 4,
    "metric_id": 1232341,
    "metric_type": "set",
    "offset": 1,
    "org_id": 1,
    "partition": 0,
    "project_id": 2,
    "retention_days": 22,
    "set_values": [
      324234,
      345345,
      456456,
      567567
    ],
    "tags.key": [
      10,
      20,
      30
    ],
    "tags.value": [
      11,
      22,
      33
    ],
    "timeseries_id": 1521156896,
    "timestamp": 1676388965,
    "use_case_id": "release-health"
  }
]
